# Sui_Move_to_Knowledge_Graph

./: .gitignore  Cargo.toml  README.md  audit_report.md  build.sh  data.txt  data1.txt  import_to_neo4j.py  main.py  pyproject.toml
res/examples_bytecode/detect10_path_explosion(fixed)/: tick_math.mv  trading.mv
res/examples_project/recursive_call_demo/: Move.toml
res/examples_project/recursive_call_demo/sources/: recursive_call_demo3.move  recursive_call_demo4.move
res/examples_project/repeated_call_demo/: Move.toml
res/examples_project/repeated_call_demo/sources/: repeated_call_demo1.move  repeated_call_demo2.move  repeated_call_demo4.move  repeated_call_demo5.move
res/examples_project/sui_proj/: Move.toml
src/: lib.rs  main.rs
src/cli/: parser.rs
src/detect/: detect.rs  detect1.rs  detect2.rs  detect4.rs  detect8.rs
src/move_ir/: bytecode_display.rs  control_flow_graph.rs  data_dependency.rs  generate_bytecode.rs  mod.rs  packages.rs  sbir_generator.rs  utils.rs
src/scanner/: detectors.rs  exporter.rs  graph.rs  mod.rs  option.rs  printer.rs  result.rs
src/scanner/detects/: detect10.rs  detect2.rs  detect9.rs  mod.rs
src/unit_tests/: mod.rs  test_cli.rs  test_detect.rs  test_generate_bytecode.rs  test_sbir.rs
src/utils/: graph.rs  utils.rs
testdata/examples_mv/aptos/: DemoCoin.mv  access_control.mv  infinite_loop.mv  infinite_loop2.mv  overflow.mv  precision.mv  unchecked_return.mv
tests/: test_walkdir.rs
tests/sui_wallet_staking/: Move.toml
tests/sui_wallet_staking/sources/: wallet_staking.move
tests/test_project/: Move.toml
tests/test_sources/: basic_coin.move
