[package]
name = "MoveScanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-binary-format = { git = "https://github.com/move-language/move", rev = "0151500f3fd3d6c2617f4b95f1bd88477d604c80" }
move-core-types = { git = "https://github.com/move-language/move", rev = "0151500f3fd3d6c2617f4b95f1bd88477d604c80" }
move-bytecode-source-map = { git = "https://github.com/move-language/move", rev = "0151500f3fd3d6c2617f4b95f1bd88477d604c80" }
move-ir-types = { git = "https://github.com/move-language/move", rev = "0151500f3fd3d6c2617f4b95f1bd88477d604c80" }
move-disassembler =  { git = "https://github.com/move-language/move", rev = "0151500f3fd3d6c2617f4b95f1bd88477d604c80" }
itertools = "0.10.5"
serde_json = "1.0"
serde = "1.0"
regex = "1.5"
clap = { version = "4.1.11", features = ["derive"] }