[package]
name = "MoveScanner"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-binary-format = { git = "https://github.com/uestc-sec/move" }
move-core-types = { git = "https://github.com/uestc-sec/move" }
move-bytecode-source-map = { git = "https://github.com/uestc-sec/move" }
move-ir-types = { git = "https://github.com/uestc-sec/move" }
move-disassembler =  { git = "https://github.com/uestc-sec/move" }
move-command-line-common = { git = "https://github.com/uestc-sec/move" }
move-compiler = { git = "https://github.com/uestc-sec/move" }
move-model = { git = "https://github.com/uestc-sec/move" }
move-prover-test-utils = { git = "https://github.com/uestc-sec/move" }
move-package = { git = "https://github.com/uestc-sec/move" }
move-stackless-bytecode = { git = "https://github.com/uestc-sec/move" }
move-cli = { git = "https://github.com/uestc-sec/move" }
move-bytecode-utils = { git = "https://github.com/uestc-sec/move" }
itertools = "0.11.0"
serde_json = "1.0"
serde = "1.0"
toml = "0.7.6"
regex = "1.5"
clap = { version = "4.1.11", features = ["derive","string"] }
codespan = "0.11.1"
codespan-reporting = { version = "0.11.1", features = ["serde", "serialization"] }
anyhow = "1.0.52"
petgraph = "0.6.3"
num = "0.4.0"
hex = "0.4.3"
ethnum = "1.3.2"
time = "0.3.26"
ouroboros = "0.17.2"
openssl = "0.10.55"
prettytable-rs = "0.10.0"
strum = "0.25"
strum_macros = "0.25"
walkdir = "2"
ansi_term = "0.12"
# log = "0.4"
# env_logger = "0.10"